added responsiveness on the general public landing page

--- a/app/webroot/css/upgrade.css
+++ b/app/webroot/css/upgrade.css
@@ -29,7 +29,6 @@
     margin: auto;
     width: 100%;
     text-transform: uppercase;
-
 }
 
 #section {
@@ -212,12 +211,62 @@
     text-align: center;
   }
   
+  /* Mpublic begin */
+
+.hero{
+    background-color: #F0F9F2;
+    width: 100%;
+    padding-top: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100% 100%;
+}
+
+
+.image {
+    width: 30%;
+    margin-right: 20%;
+}
+
+/*Mpublic end*/
+
  /* Media Queries for responsiveness */
+
+ @media only screen and (min-width: 979px) {
+   .hero{
+        padding-top: 5%;
+   }
+   
+}
 
 @media only screen and (max-width: 768px) {
     .inner_section {
         width: 100%;
     }
+
+    .hero{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .mpublic-h2{
+        font-size: 1.5rem; 
+    }
+
+    .mpublic-p{
+        font-size: 0.9rem; 
+    }
+
+    .image {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+
 }
 
 @media only screen and (max-width: 767px) {
