updated the provider landing page to be responsive

--- a/app/webroot/css/upgrade.css
+++ b/app/webroot/css/upgrade.css
@@ -283,6 +283,9 @@
         flex-direction: column;
         width: 70%;
     }
+    .tools{
+        flex-direction: column;
+    }
     .inner_section {
         width: 100%;
     }
