--- a/app/webroot/css/pvers.css
+++ b/app/webroot/css/pvers.css
@@ -35,7 +35,9 @@ body {
   min-height: 100px;
 }
 
-
+.close {
+  margin-left: 10px; /* Adjust this value to control the spacing between the title and the close icon */
+}
 .dark-line {
   border: none;
   border-top: 2px solid #333;
