--- a/app/webroot/css/padr.css
+++ b/app/webroot/css/padr.css
@@ -60,8 +60,12 @@
     .set-input{
         width: 320px;
     }
-    
-    
+    /* .pull-right{
+        margin-right: 500px;
+    } */
+    .pull-left{
+        margin-left: 10px;
+    }
  }
  
  @media only screen and (max-width: 593px) {
