--- a/app/webroot/css/pvers.css
+++ b/app/webroot/css/pvers.css
@@ -43,6 +43,25 @@ body {
   padding: 0px;
 }
 
+
+/* Making Footer Responsive */
+@media (max-width: 767px) {
+  #footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
+
+  #footer .container-fluid {
+    padding: 20px;
+  }
+  #footer .row-fluid {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+/* End Making Footer Responsive */
+
 .footer-default {
   background: #37462D;
 }
@@ -62,7 +81,7 @@ body {
 
 .footer- {
   background: #37462D;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   padding: 10px 0;
