--- a/app/webroot/css/sadr.css
+++ b/app/webroot/css/sadr.css
@@ -24,3 +24,26 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* Make the medicine div scrollable */
+.srollable {
+    overflow-x: auto;
+    white-space: nowrap;
+    position: relative;
+  }
+  
+  .srollable {
+    max-width: 100%;
+  }
+
+  .srollable::after {
+    content: '';
+    position: absolute;
+    bottom: 0; 
+    left: 0;
+    width: 80%;
+    height: 20px;
+    background-color: rgb(252, 252, 252);
+    opacity: 1;
+    pointer-events: none;
+  }
