--- a/app/webroot/css/sadr.css
+++ b/app/webroot/css/sadr.css
@@ -47,3 +47,14 @@
     opacity: 1;
     pointer-events: none;
   }
+
+ @media (max-width: 1050px) {
+    .form-container {
+      display: flex;
+      flex-direction: column;
+    }
+    .form-container .span6 {
+      width: 100%;
+    }
+  }
+ 
